tooling/nargo_cli/tests/snapshots/execution_failure/regression_9904/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
bug: Brillig function call isn't properly covered by a manual constraint
  ┌─ src/main.nr:4:9
  │
4 │         func_1(-1_i8, false)
  │         -------------------- This Brillig call's inputs and its return values haven't been sufficiently constrained. This should be done to prevent potential soundness vulnerabilities
  │
  = Call stack:
    1: main
            at src/main.nr:4:9

error: Assertion failed: Attempt to calculate the remainder with overflow
   ┌─ src/main.nr:13:14
   │
13 │             (-128_i8 % a)
   │              -----------
   │
   = Call stack:
     1: main
             at src/main.nr:4:9
     2: func_1
             at src/main.nr:13:14

Failed assertion
