tooling/nargo_cli/tests/snapshots/execution_failure/regression_9904/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Attempt to calculate the remainder with overflow
   ┌─ src/main.nr:13:14
   │
13 │             (-128_i8 % a)
   │              -----------
   │
   = Call stack:
     1: main
             at src/main.nr:4:9
     2: func_1
             at src/main.nr:13:14

Failed assertion
