tooling/nargo_cli/tests/snapshots/execution_failure/regression_9904/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to calculate the remainder with overflow
   ┌─ src/main.nr:13:14
   │
13 │             (-128_i8 % a)
   │              -----------
   │

Error interpreting main function
